--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.0.11",
     "codecov": "3.7.0",
+    "coveralls": "^3.0.11",
     "istanbul": "^0.4.3",
     "mocha": "^7.1.1",
     "mocha-lcov-reporter": "^1.2.0",
     "nock": "12.0.3",
-    "sinon": "^1.17.2"
+    "sinon": "^2.3.1",
+    "sinon-chai": "^3.5.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
