--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mocha": "^7.1.1",
     "mocha-lcov-reporter": "^1.2.0",
     "nock": "12.0.3",
+    "rss-parser": "^3.8.0",
     "sinon": "^2.3.1",
     "sinon-chai": "^3.5.0",
     "sinon-stub-promise": "^4.0.0"
